--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
     "react-simple-image-slider": "^2.4.1",
+    "styled-components": "^6.1.12",
     "three": "^0.154.0",
     "wow.js": "^1.2.2"
   }
